Added new solver version